fixed the skills card as well as some of the aligntment of the aboutme card

--- a/main_portfolio/src/components/aboutme/style.css
+++ b/main_portfolio/src/components/aboutme/style.css
@@ -19,8 +19,8 @@
 #aboutmeTxtBox {
     background-color: lightgrey;
     border: solid 3px black;
-    margin: 100px;
-    /* width: 100%; */
+    margin: 25px;
+    /* margin-right: 40px; */
     /* padding-left: 20px; */
 }
 
