--- a/main_portfolio/src/components/skillscard/style.css
+++ b/main_portfolio/src/components/skillscard/style.css
@@ -1,3 +1,4 @@
 #skillsCard {
     border: solid black 3px;
+    margin: 25px;
 }
